fix issue with file headlines bleeding into first q-a pair

--- a/manki/pygments.css
+++ b/manki/pygments.css
@@ -1,4 +1,3 @@
-.codehilite { text-align: left }
 .hll { background-color: #ffffcc }
 .c { color: #408080; font-style: italic } /* Comment */
 .err { border: 1px solid #FF0000 } /* Error */
