--- a/manki/style.css
+++ b/manki/style.css
@@ -2,5 +2,6 @@
 	font-family: 'Crimson Pro', 'Crimson Text', 'Cardo', 'Times', 'serif';
 	text-align: center;
 	color: black;
-	background-color: white;
+	background-color: blue;
 }
+.codehilite { text-align: left }
